testsuite/tests/partial-sigs/should_fail/PatBind3.stderr

PatBind3.hs:6:17: error: [GHC-83865]
    • Couldn't match type ‘(Bool, w)’ with ‘Char’
      Expected: (Bool, w) -> Char
        Actual: (Bool, w) -> (Bool, w)
    • In the first argument of ‘Just’, namely ‘id’
      In the expression: Just id
      In a pattern binding: Just foo = Just id
    • Relevant bindings include
        foo :: (Bool, w) -> Char (bound at PatBind3.hs:6:6)
